src/objects/mdm_Global_Listening_Tree__c.object
<CustomObject>
    <description>MDM - mdm_Global_Listening_Tree__c</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_From_CSAT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CEC: If checked, cases with this reason code will be excluded from CSAT survey.</description>
        <label>Exclude From CSAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L1_Code__c</fullName>
        <label>L1 Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L1_Desc__c</fullName>
        <label>L1 Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2_Code__c</fullName>
        <label>L2 Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2_Desc__c</fullName>
        <label>L2 Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L3_Code__c</fullName>
        <label>L3 Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L3_Desc__c</fullName>
        <label>L3 Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L5_Short_Desc__c</fullName>
        <label>L5 Short Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Global Listening Tree</label>
    <nameField>
        <label>Global Listening Tree  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Listening Trees</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>